--- a/20220823_simplePlatformer/index.html
+++ b/20220823_simplePlatformer/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build.loader.js";
+      var loaderUrl = buildUrl + "/build-uncompressed2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build.data.gz",
-        frameworkUrl: buildUrl + "/build.framework.js.gz",
-        codeUrl: buildUrl + "/build.wasm.gz",
+        dataUrl: buildUrl + "/build-uncompressed2.data",
+        frameworkUrl: buildUrl + "/build-uncompressed2.framework.js",
+        codeUrl: buildUrl + "/build-uncompressed2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
